<?xml version="1.0"?>
<package format="3">
  <name>warehouse_emergency_supervisor</name>
  <version>0.1.0</version>
  <description>Isaac Sim and ROS 2 integrated warehouse emergency supervisor.</description>
  <maintainer email="gomtanguk@example.com">Gomtanguk</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
